# antescofo

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  SETUP_GUIDE.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  simple_demo_score.asco.txt  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/antescofo/: client.html  events.html  exceptions.html  osc.html  score.html  simple_antescofo_score_generator.html  types.html  util.html
_modules/antescofo/wip/: audio.html  builder.html  events.html  player.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: antescofo.rst.txt
_sources/module_docs/antescofo/: client.rst.txt  constants.rst.txt  events.rst.txt  exceptions.rst.txt  osc.rst.txt  score.rst.txt  simple_antescofo_score_generator.rst.txt  types.rst.txt  util.rst.txt  wip.rst.txt
_sources/module_docs/antescofo/wip/: audio.rst.txt  builder.rst.txt  events.rst.txt  player.rst.txt
antescofo/: __init__.py  client.py  constants.py  events.py  exceptions.py  osc.py  pd_synth_patch.pd  score.py  simple_antescofo_score_generator.py  types.py  util.py
antescofo/wip/: __init__.py  audio.py  builder.py  events.py  player.py
examples/: README.md  antescofo_example_script.py  basic_control.py  event_listening.py  notebook_demo.md  quick_reference.py  run_demo.py  score_generation.py  setup_config.py
misc/: GETTING_STARTED.md  antescofo_demo.ipynb  complex_score.asco.txt  test_wip.ipynb
module_docs/: antescofo.html
module_docs/antescofo/: client.html  constants.html  events.html  exceptions.html  osc.html  score.html  simple_antescofo_score_generator.html  types.html  util.html  wip.html
module_docs/antescofo/wip/: audio.html  builder.html  events.html  player.html
tests/: __init__.py  test_events.py  test_score.py  test_types.py
