[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "antescofo"
version = "0.1.1"
description = "A Python interface for Antescofo, the score following and synchronous programming language for music"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Antescofo Python Interface Contributors" },
]
keywords = [
    "antescofo",
    "music",
    "osc",
    "score-following",
    "real-time",
    "ircam",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-osc>=1.8.0",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/antescofo"
Documentation = "https://antescofo-doc.ircam.fr/"
Repository = "https://github.com/yourusername/antescofo"
"Bug Tracker" = "https://github.com/yourusername/antescofo/issues"

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "antescofo*",
]

[tool.black]
line-length = 100
target-version = [
    "py38",
]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
